Pollus.Emscripten/WGPU/WGPUBrowserNative.cs


    [DllImport("__Internal_emscripten", EntryPoint = "wgpuAdapterReference")]
    extern public static unsafe void AdapterReference(Adapter* adapter);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuAdapterRelease")]
    extern public static unsafe void AdapterRelease(Adapter* adapter);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBindGroupSetLabel")]
    extern public static unsafe void BindGroupSetLabel(BindGroup* bindGroup, byte* label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBindGroupSetLabel")]
    extern public static unsafe void BindGroupSetLabel(BindGroup* bindGroup, in byte label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBindGroupSetLabel")]
    extern public static unsafe void BindGroupSetLabel(BindGroup* bindGroup, [MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBindGroupReference")]
    extern public static unsafe void BindGroupReference(BindGroup* bindGroup);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBindGroupRelease")]
    extern public static unsafe void BindGroupRelease(BindGroup* bindGroup);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBindGroupLayoutSetLabel")]
    extern public static unsafe void BindGroupLayoutSetLabel(BindGroupLayout* bindGroupLayout, byte* label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBindGroupLayoutSetLabel")]
    extern public static unsafe void BindGroupLayoutSetLabel(BindGroupLayout* bindGroupLayout, in byte label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBindGroupLayoutSetLabel")]
    extern public static unsafe void BindGroupLayoutSetLabel(BindGroupLayout* bindGroupLayout, [MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBindGroupLayoutReference")]
    extern public static unsafe void BindGroupLayoutReference(BindGroupLayout* bindGroupLayout);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBindGroupLayoutRelease")]
    extern public static unsafe void BindGroupLayoutRelease(BindGroupLayout* bindGroupLayout);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBufferDestroy")]
    extern public static unsafe void BufferDestroy(Buffer* buffer);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBufferGetConstMappedRange")]
    extern public static unsafe void* BufferGetConstMappedRange(Buffer* buffer, nuint offset, nuint size);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBufferGetMapState")]
    extern public static unsafe BufferMapState BufferGetMapState(Buffer* buffer);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBufferGetMappedRange")]
    extern public static unsafe void* BufferGetMappedRange(Buffer* buffer, nuint offset, nuint size);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBufferGetSize")]
    extern public static unsafe ulong BufferGetSize(Buffer* buffer);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBufferGetUsage")]
    extern public static unsafe BufferUsage BufferGetUsage(Buffer* buffer);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBufferMapAsync")]
    extern public static unsafe void BufferMapAsync(Buffer* buffer, MapMode mode, nuint offset, nuint size, PfnBufferMapCallback callback, void* userdata);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBufferSetLabel")]
    extern public static unsafe void BufferSetLabel(Buffer* buffer, byte* label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBufferSetLabel")]
    extern public static unsafe void BufferSetLabel(Buffer* buffer, in byte label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBufferSetLabel")]
    extern public static unsafe void BufferSetLabel(Buffer* buffer, [MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBufferUnmap")]
    extern public static unsafe void BufferUnmap(Buffer* buffer);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBufferReference")]
    extern public static unsafe void BufferReference(Buffer* buffer);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuBufferRelease")]
    extern public static unsafe void BufferRelease(Buffer* buffer);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandBufferSetLabel")]
    extern public static unsafe void CommandBufferSetLabel(CommandBuffer* commandBuffer, byte* label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandBufferSetLabel")]
    extern public static unsafe void CommandBufferSetLabel(CommandBuffer* commandBuffer, in byte label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandBufferSetLabel")]
    extern public static unsafe void CommandBufferSetLabel(CommandBuffer* commandBuffer, [MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandBufferReference")]
    extern public static unsafe void CommandBufferReference(CommandBuffer* commandBuffer);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandBufferRelease")]
    extern public static unsafe void CommandBufferRelease(CommandBuffer* commandBuffer);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderBeginComputePass")]
    extern public static unsafe ComputePassEncoder* CommandEncoderBeginComputePass(CommandEncoder* commandEncoder, ComputePassDescriptor* descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderBeginComputePass")]
    extern public static unsafe ComputePassEncoder* CommandEncoderBeginComputePass(CommandEncoder* commandEncoder, in ComputePassDescriptor descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderBeginRenderPass")]
    extern public static unsafe RenderPassEncoder* CommandEncoderBeginRenderPass(CommandEncoder* commandEncoder, WGPURenderPassDescriptor_Browser* descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderBeginRenderPass")]
    extern public static unsafe RenderPassEncoder* CommandEncoderBeginRenderPass(CommandEncoder* commandEncoder, in WGPURenderPassDescriptor_Browser descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderClearBuffer")]
    extern public static unsafe void CommandEncoderClearBuffer(CommandEncoder* commandEncoder, Buffer* buffer, ulong offset, ulong size);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyBufferToBuffer")]
    extern public static unsafe void CommandEncoderCopyBufferToBuffer(CommandEncoder* commandEncoder, Buffer* source, ulong sourceOffset, Buffer* destination, ulong destinationOffset, ulong size);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyBufferToTexture")]
    extern public static unsafe void CommandEncoderCopyBufferToTexture(CommandEncoder* commandEncoder, ImageCopyBuffer* source, ImageCopyTexture* destination, Extent3D* copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyBufferToTexture")]
    extern public static unsafe void CommandEncoderCopyBufferToTexture(CommandEncoder* commandEncoder, ImageCopyBuffer* source, ImageCopyTexture* destination, in Extent3D copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyBufferToTexture")]
    extern public static unsafe void CommandEncoderCopyBufferToTexture(CommandEncoder* commandEncoder, ImageCopyBuffer* source, in ImageCopyTexture destination, Extent3D* copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyBufferToTexture")]
    extern public static unsafe void CommandEncoderCopyBufferToTexture(CommandEncoder* commandEncoder, ImageCopyBuffer* source, in ImageCopyTexture destination, in Extent3D copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyBufferToTexture")]
    extern public static unsafe void CommandEncoderCopyBufferToTexture(CommandEncoder* commandEncoder, in ImageCopyBuffer source, ImageCopyTexture* destination, Extent3D* copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyBufferToTexture")]
    extern public static unsafe void CommandEncoderCopyBufferToTexture(CommandEncoder* commandEncoder, in ImageCopyBuffer source, ImageCopyTexture* destination, in Extent3D copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyBufferToTexture")]
    extern public static unsafe void CommandEncoderCopyBufferToTexture(CommandEncoder* commandEncoder, in ImageCopyBuffer source, in ImageCopyTexture destination, Extent3D* copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyBufferToTexture")]
    extern public static unsafe void CommandEncoderCopyBufferToTexture(CommandEncoder* commandEncoder, in ImageCopyBuffer source, in ImageCopyTexture destination, in Extent3D copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyTextureToBuffer")]
    extern public static unsafe void CommandEncoderCopyTextureToBuffer(CommandEncoder* commandEncoder, ImageCopyTexture* source, ImageCopyBuffer* destination, Extent3D* copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyTextureToBuffer")]
    extern public static unsafe void CommandEncoderCopyTextureToBuffer(CommandEncoder* commandEncoder, ImageCopyTexture* source, ImageCopyBuffer* destination, in Extent3D copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyTextureToBuffer")]
    extern public static unsafe void CommandEncoderCopyTextureToBuffer(CommandEncoder* commandEncoder, ImageCopyTexture* source, in ImageCopyBuffer destination, Extent3D* copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyTextureToBuffer")]
    extern public static unsafe void CommandEncoderCopyTextureToBuffer(CommandEncoder* commandEncoder, ImageCopyTexture* source, in ImageCopyBuffer destination, in Extent3D copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyTextureToBuffer")]
    extern public static unsafe void CommandEncoderCopyTextureToBuffer(CommandEncoder* commandEncoder, in ImageCopyTexture source, ImageCopyBuffer* destination, Extent3D* copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyTextureToBuffer")]
    extern public static unsafe void CommandEncoderCopyTextureToBuffer(CommandEncoder* commandEncoder, in ImageCopyTexture source, ImageCopyBuffer* destination, in Extent3D copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyTextureToBuffer")]
    extern public static unsafe void CommandEncoderCopyTextureToBuffer(CommandEncoder* commandEncoder, in ImageCopyTexture source, in ImageCopyBuffer destination, Extent3D* copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyTextureToBuffer")]
    extern public static unsafe void CommandEncoderCopyTextureToBuffer(CommandEncoder* commandEncoder, in ImageCopyTexture source, in ImageCopyBuffer destination, in Extent3D copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyTextureToTexture")]
    extern public static unsafe void CommandEncoderCopyTextureToTexture(CommandEncoder* commandEncoder, ImageCopyTexture* source, ImageCopyTexture* destination, Extent3D* copySize);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCommandEncoderCopyTextureToTexture")]
    extern public static unsafe void CommandEncoderCopyTextureToTexture(CommandEncoder* commandEncoder, ImageCopyTexture* source, ImageCopyTexture* destination, in Extent3D copySize);
